index.css
body {
	font-family: Raleway, sans-serif;
}

.heading {
	text-align: center;
}

.products {
	display: inline-block;
}

.products a {
	text-decoration: none;
}

.products a img {
	width: 115px;
	height: 101px;
}

